# PythonTemplate

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
.cursor/rules/: rules.mdc
.github/workflows/: cd.yml  ci.yml
src/api/: __init__.py  app.py
src/api/controllers/: __init__.py  example_controller.py  health_controller.py
src/application/: __init__.py
src/application/handlers/: __init__.py  example_handler.py
src/application/services/: __init__.py  example_service.py
src/application/specifications/: __init__.py  example_specs.py
src/application/view_models/: __init__.py  base.py  example_vm.py
src/core/: __init__.py  either.py  error_result.py  logger.py  option.py  pipe.py  railway.py  result.py  specification.py  try_monad.py
src/domain/: __init__.py
src/domain/entities/: __init__.py  base.py  example.py
src/domain/enums/: __init__.py  status.py
src/infrastructure/: __init__.py  config.py  dependencies.py
src/infrastructure/repositories/: __init__.py  example_repository.py
src/infrastructure/services/: __init__.py
tests/: conftest.py
tests/integration/: test_api.py
tests/unit/core/: __init__.py  test_either.py  test_logger.py  test_option.py  test_specification.py
tests/unit/handlers/: __init__.py  test_example_handler.py
tests/unit/specifications/: __init__.py  test_example_specs.py
tests/unit/view_models/: __init__.py  test_api_response.py
